# NIMeet

./: .dockerignore  .gitignore  CAMERA_PERMISSIONS.md  CORS_RESTART_INSTRUCTIONS.md  DOCKER.md  DOCKER_INTEGRATION_COMPLETE.md  DOCKER_QUICKSTART.txt  DOCKER_SUMMARY.md  FILES_CREATED.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_FIXES.md  docker-compose.prod.yml  docker-compose.yml  install-build-tools.ps1
backend/: Dockerfile  main.py  package-lock.json  package.json  requirements.txt
backend/src/: server.js
backend/src/config/: socket.js
backend/src/controllers/: roomController.js
backend/src/models/: Room.js
backend/src/services/: webrtcSignaling.js
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  TAURI_SETUP.md  check-tauri-setup.js  generate-icons.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/hooks/: useAuth.ts  (+1 more)
livekit/: livekit.yaml
nginx/: CORS_SETUP.md  meet.nicorp.tech.conf
nimeet-cordova/: config.xml  package-lock.json  package.json
nimeet-cordova/www/: index.html
nimeet-electron/: package-lock.json
nimeet-electron/www/: asset-manifest.json
nimeet-youtube-extension/: README.md  manifest.json
nimeet-youtube-extension/background/: service-worker.js
nimeet-youtube-extension/content/: nimeet.js  youtube.js
nimeet-youtube-extension/styles/: youtube-button.css
(+38 files in other folders)
