[package]
name = "nimeet"
version = "0.1.0"
description = "NIMeet - Video Conferencing App"
authors = ["Nick"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["default"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
